# ssdp-responder

./: configure.ac  ssdp.h  ssdpd.c  web.c
